# dotfiles

./: #README.md#  .gitignore  .gitmodules  README.md  antigen.rc  bashrc  bors.toml  conf.yaml  config.yaml  dot  install  install.conf.yaml  local  tmp.sh  tmp1.txt  tmp2.txt  tmp3.txt  zshrc
.circleci/: config.yml
.github/: مالكو الرموز
aliases/: browsing.zsh  coding.zsh  fzf.zsh  general.zsh  terminal.zsh
android/: usb
bindings/: fzf.zsh
cheats/: android.cheat  bash.cheat  bazel.cheat  brew.cheat  clipboard.cheat  clojure.cheat  code.cheat  crontab.cheat  docker.cheat  dot_pkg.cheat  editor.cheat  envoy.cheat  filesystem.cheat  fre.cheat  fs.cheat  git.cheat  javascript.cheat  json.cheat  jvm.cheat  misc.cheat  money.cheat  network.cheat  news.cheat  osx.cheat  process.cheat  rice.cheat  share.cheat  stats.cheat  system.cheat  test.cheat  tmp.cheat
cheatsheets/: awk.cheat  docker.cheat  network.cheat
chrome/: gmail_clean.css
clj/: .gitignore  README.md  deps.edn  main.js  project.clj  project0.clj
custom/: clojure.zsh  work.zsh
docs/: cheatsheets.md  file-manager.md  navigators.md  package-manager.md  playground.md  transpile.md
emacs/: spacemacs.el
git/: agignore  config  core.sh  gitui_config.ron  home.ignore  ignore
links/: android.csv  android_gdrive.csv  conf.osx.yaml  conf.wsl.yaml  linux.csv  linux.yaml  osx.csv  osx.yaml  unix.csv  unix.yaml  work.csv  wsl.yaml
navi/: config.yaml
osx/: io.github.denisidoro.tcpserver.plist
plugins/: config.zsh  ohmy.zsh  zplug.zsh
raycast/: downloads.sh  emoji.sh  navi.sh  slack-jump.sh  slack.sh  spotify.sh  utest.sh  whatsapp
rust/: Cargo.toml
rust/src/: handler.rs  lib.rs  opts.rs  transpile.rs
rust/src/table/: mod.rs
rust/src/transpile/: bash.rs  fs.rs  go.rs  mod.rs  transpiler.rs
scripts/: conf.yaml  dependencies.txt  install  install-dep  macinstall  package.json  setup  setup-mac.sh  setup-ubuntu.sh  setup.sh  update-dotfiles
scripts-rust/gotranspiler/: Cargo.toml
scripts-rust/gotranspiler/src/: main.rs
(+888 files in other folders)
