[package]
name = "dotrs"
version = "2020.6.16"
authors = ["Denis Isidoro <denis_isidoro@live.com>"]
edition = "2018"
description = "Awesome personal dotfiles"
homepage = "https://github.com/denisidoro/dotfiles"
documentation = "https://github.com/denisidoro/dotfiles"
repository = "https://github.com/denisidoro/dotfiles"
keywords = ["dotfiles", "cli", "scripts"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[profile.release]
# opt-level = 'z'
# lto = true
# codegen-units = 1

[dependencies]
clap = "3.0.0-beta.1"
anyhow = "1.0.27"
lazy_static = "1.4.0"

[dependencies.regex]
version = "1.3.0"
default-features = false
features = ["std", "unicode-perl"]

[lib]
name = "dotrs"
path = "src/lib.rs"

[[bin]]
name = "dotrs"
path = "src/bin/main.rs"
bench = false