[package]
name = "gotranspiler"
version = "0.1.0"
authors = ["Denis Isidoro <denis.isidoro@uber.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]

[dependencies.regex]
version = "1.3.0"
default-features = false
features = ["std", "unicode-perl"]
